force-app/main/default/objects/Property_Unit__c/fields/Area_SQFt__c.field-meta.xml
<CustomField>
    <fullName>Area_SQFt__c</fullName>
    <label>Area sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>