force-app/main/default/objects/Property_Unit__c/fields/Property_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit_Code__c</fullName>
    <displayFormat>PUC-{000000}</displayFormat>
    <label>Property Unit Code</label>
    <type>AutoNumber</type>
</CustomField>