force-app/main/default/objects/Property_Unit__c/fields/Unit_View_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_View_Type__c</fullName>
    <label>Unit View Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garden View</fullName>
            </value>
            <value>
                <fullName>Hill View</fullName>
            </value>
            <value>
                <fullName>City View</fullName>
            </value>
            <value>
                <fullName>Park View</fullName>
            </value>
            <value>
                <fullName>Sea View</fullName>
            </value>
            <value>
                <fullName>Sunset View</fullName>
            </value>
            <value>
                <fullName>Sunrise View</fullName>
            </value>
            <value>
                <fullName>Lake View</fullName>
            </value>
            <value>
                <fullName>Hills View</fullName>
                <isActive>false</isActive>
                <label>Hills View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>